fixed the exit-button on iphone app info

--- a/src/components/IphoneApps.css
+++ b/src/components/IphoneApps.css
@@ -64,6 +64,9 @@
   overflow-wrap: break-word;
 }
 
+.exit-button {
+  cursor: pointer;
+}
 .app-description {
   display: flex;
   justify-content: center;
